force-app/main/default/objects/SM_PlageBlocageParMotif__mdt/SM_PlageBlocageParMotif__mdt.object-meta.xml
<CustomObject>
    <description>@SMILE: custom metadata permettant de récupérer les dates de fin en fonction des motifs. Utiliser dans parcours SOLI, CNP et Gestion de Blocage</description>
    <label>SM_PlageBlocageParMotif</label>
    <pluralLabel>SM_PlageBlocagesParMotif</pluralLabel>
</CustomObject>