force-app/main/default/objects/SM_PlageBlocageParMotif__mdt/fields/CodeBlocage__c.field-meta.xml
<CustomField>
    <fullName>CodeBlocage__c</fullName>
    <description>@SMILE : code blocage qui remplace le developerName</description>
    <label>Code Blocage</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>