force-app/main/default/objects/SM_PlageBlocageParMotif__mdt/fields/MotifLabel__c.field-meta.xml
<CustomField>
    <fullName>MotifLabel__c</fullName>
    <label>MotifLabel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>