force-app/main/default/objects/SM_PlageBlocageParMotif__mdt/fields/ParcoursBlocages__c.field-meta.xml
<CustomField>
    <fullName>ParcoursBlocages__c</fullName>
    <defaultValue>false</defaultValue>
    <description>@SMILE : champ utilisé uniquement dans le parcours Gestion des blocages</description>
    <label>Parcours Blocages</label>
    <type>Checkbox</type>
</CustomField>