force-app/main/default/objects/SM_PlageBlocageParMotif__mdt/fields/ParcoursCNP__c.field-meta.xml
<CustomField>
    <fullName>ParcoursCNP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>@SMILE : champ utilisé uniquement dans le parcours CNP</description>
    <label>Parcours CNP</label>
    <type>Checkbox</type>
</CustomField>