force-app/main/default/objects/SM_PlageBlocageParMotif__mdt/fields/ParcoursSOL__c.field-meta.xml
<CustomField>
    <fullName>ParcoursSOL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>@SMILE : champ utilisé uniquement dans le parcours solidarité</description>
    <label>Parcours SOL</label>
    <type>Checkbox</type>
</CustomField>