force-app/main/default/objects/SM_PlageBlocageParMotif__mdt/fields/Plagepossible__c.field-meta.xml
<CustomField>
    <fullName>Plagepossible__c</fullName>
    <label>Plage possible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>