force-app/main/default/objects/SM_PlageBlocageParMotif__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>@SMILE: type de blocage</description>
    <label>Type de blocage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relance</fullName>
            </value>
            <value>
                <fullName>Facture</fullName>
            </value>
            <value>
                <fullName>Prelevement</fullName>
            </value>
            <value>
                <fullName>Decaissement</fullName>
            </value>
            <value>
                <fullName>Facturation</fullName>
            </value>
            <value>
                <fullName>Encaissement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>