force-app/main/default/objects/SM_PlageBlocageParMotif__mdt/listViews/All_plage_possibles.listView-meta.xml
<ListView>
    <fullName>All_plage_possibles</fullName>
    <columns>MasterLabel</columns>
    <columns>Plagepossible__c</columns>
    <columns>DeveloperName</columns>
    <columns>MotifLabel__c</columns>
    <columns>Type__c</columns>
    <columns>CodeBlocage__c</columns>
    <columns>ParcoursBlocages__c</columns>
    <columns>ParcoursCNP__c</columns>
    <columns>ParcoursSOL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All plage possibles</label>
    <language>en_US</language>
</ListView>